--- a/local.properties
+++ b/local.properties
@@ -6,3 +6,4 @@
 # header note.
 #Wed Sep 17 12:53:57 IDT 2025
 sdk.dir=C\:\\Users\\benariet\\AppData\\Local\\Android\\Sdk
+org.gradle.java.home=C\:\\Program Files\\Android\\Android Studio\\jbr
