--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
+        android:supportsRtl="false"
         android:theme="@style/Theme.SemScan"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
@@ -45,15 +45,6 @@
             android:screenOrientation="portrait"
             android:keepScreenOn="true" />
             
-        <activity
-            android:name=".ui.teacher.TeacherAttendanceActivity"
-            android:exported="false"
-            android:theme="@style/Theme.SemScan" />
-            
-        <activity
-            android:name=".ui.student.SubmitAbsenceActivity"
-            android:exported="false"
-            android:theme="@style/Theme.SemScan" />
             
         <activity
             android:name=".ui.qr.QRScannerActivity"
@@ -74,16 +65,6 @@
             
         <activity
             android:name=".ui.teacher.ExportActivity"
-            android:exported="false"
-            android:theme="@style/Theme.SemScan" />
-            
-        <activity
-            android:name=".ui.teacher.CourseManagementActivity"
-            android:exported="false"
-            android:theme="@style/Theme.SemScan" />
-            
-        <activity
-            android:name=".ui.teacher.RecordsDashboardActivity"
             android:exported="false"
             android:theme="@style/Theme.SemScan" />
 
