refactor: Replace Teacher role with Presenter throughout codebase
- Rename TeacherHomeActivity to PresenterHomeActivity
- Rename TeacherStartSessionActivity to PresenterStartSessionActivity
- Update all UI strings from "Teacher" to "Presenter" (English and Hebrew)
- Rename layout files: activity_teacher_home.xml → activity_presenter_home.xml
- Rename layout files: activity_teacher_start_session.xml → activity_presenter_start_session.xml
- Rename menu files: menu_teacher_home.xml → menu_presenter_home.xml
- Update AndroidManifest.xml activity references
- Update role picker UI from card_teacher to card_presenter
- Update API key references from getTeacherApiKey() to getPresenterApiKey()
- Maintain backward compatibility in PreferencesManager
- Update settings UI labels from "Teacher API Key" to "Presenter API Key"

This change affects the entire user interface and maintains consistency
across all components while preserving existing functionality.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -34,12 +34,12 @@
             android:theme="@style/Theme.SemScan" />
             
         <activity
-            android:name=".ui.teacher.TeacherHomeActivity"
+            android:name=".ui.teacher.PresenterHomeActivity"
             android:exported="false"
             android:theme="@style/Theme.SemScan" />
             
         <activity
-            android:name=".ui.teacher.TeacherStartSessionActivity"
+            android:name=".ui.teacher.PresenterStartSessionActivity"
             android:exported="false"
             android:theme="@style/Theme.SemScan"
             android:screenOrientation="portrait"
