--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 --add-opens=java.base/java.la
 android.useAndroidX=true
 
 # Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
+# android.enableJetifier=true  # Removed - no dependencies require Jetifier
 
 # Enable Gradle build cache
 org.gradle.caching=true
