--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -68,6 +68,17 @@
             android:exported="false"
             android:theme="@style/Theme.SemScan" />
 
+        <!-- FileProvider for secure file sharing -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="org.example.semscan.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
     </application>
 
 </manifest>
