fix: resolve network connectivity issues and enhance attendance system
- Fix network connectivity by implementing localhost with ADB reverse port forwarding
- Add ApiConstants class for centralized API configuration and timeout settings
- Create ToastUtils class for enhanced error messaging with custom durations
- Implement ManualAttendanceRequestActivity for student manual attendance requests
- Add role-based validation to prevent presenters from marking attendance
- Fix missing API key authentication in createManualRequest endpoint
- Enhance QR scanner with comprehensive debug logging and data validation
- Update ApiClient to force localhost usage and ignore cached preferences
- Add network security configuration to allow cleartext traffic for development
- Improve error handling with detailed logging for API requests and responses
- Fix session ID and student ID validation in QR code scanning
- Add proper API key headers to all protected endpoints

Resolves: Network timeout errors, "Invalid request" errors, missing API key authentication
Improves: User experience with better error messages and role-based access control

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" 
         android:maxSdkVersion="28" />
@@ -16,7 +18,8 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.SemScan"
         android:networkSecurityConfig="@xml/network_security_config"
-        tools:targetApi="31">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="30">
         
         <activity
             android:name=".ui.RolePickerActivity"
@@ -30,6 +33,11 @@
         
         <activity
             android:name=".ui.student.StudentHomeActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SemScan" />
+            
+        <activity
+            android:name=".ui.student.ManualAttendanceRequestActivity"
             android:exported="false"
             android:theme="@style/Theme.SemScan" />
             
@@ -48,6 +56,11 @@
             
         <activity
             android:name=".ui.qr.QRScannerActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SemScan" />
+            
+        <activity
+            android:name=".ui.qr.ModernQRScannerActivity"
             android:exported="false"
             android:theme="@style/Theme.SemScan" />
             
