feat: Add seminar creation functionality for teachers
- Add AddSeminarActivity with full seminar creation workflow
- Implement time slot management with weekday/time pickers
- Add validation for duplicate slots and invalid time ranges
- Create layout files for seminar creation UI:
  - activity_add_seminar.xml: Main form layout
  - item_presenter_seminar_tile.xml: Seminar display card
  - item_slot_row.xml: Time slot input row
- Add PowerShell build script (build.ps1) for automated APK building and installation
- Update various UI components and API integrations
- Enhance logging and preferences management

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -52,6 +52,11 @@
             android:theme="@style/Theme.SemScan"
             android:screenOrientation="portrait"
             android:keepScreenOn="true" />
+        
+        <activity
+            android:name=".ui.teacher.AddSeminarActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SemScan" />
             
             
         <activity
