Improve presenter dashboard layout and logs; add QR success haptic feedback Refine presenter start-session screen layout; center “Start Session” CTA Ensure seminar cards show instance title → schedule → description Add Robolectric unit tests covering title/description ordering Trigger short vibration pulse after successful QR attendance scan

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -56,6 +56,13 @@
         <activity
             android:name=".ui.teacher.AddSeminarActivity"
             android:exported="false"
+            android:label="Create Seminar"
+            android:theme="@style/Theme.SemScan" />
+
+        <activity
+            android:name=".ui.teacher.AddAvailabilityActivity"
+            android:exported="false"
+            android:label="Add Availability"
             android:theme="@style/Theme.SemScan" />
             
             
