feat: overhaul login flow and role setup
- add first-time setup screen that combines degree and role selection with confirmation modal
- introduce RoleContext activity for “BOTH” users and persist active role in preferences
- force login every launch, capture email as user ID, and call POST /api/v1/users before onboarding
- refresh Settings UI: email-as-user-id, MSc/PhD radio buttons, updated Material buttons, remove logging/about
- apply consistent outlined button styling and card tweaks across role selection and home screens
- plumb bguUsername through PreferencesManager and ServerLogger so log payloads send username + role
- update instrumentation tests and crash fixes (MaterialButton heights) to keep build green

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         tools:targetApi="30">
         
         <activity
-            android:name=".ui.RolePickerActivity"
+            android:name=".ui.auth.LoginActivity"
             android:exported="true"
             android:theme="@style/Theme.SemScan">
             <intent-filter>
@@ -30,6 +30,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name=".ui.RolePickerActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SemScan" />
+
+        <activity
+            android:name=".ui.auth.FirstTimeSetupActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SemScan.Light" />
+
+        <activity
+            android:name=".ui.auth.RoleContextActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SemScan.Light" />
         
         <activity
             android:name=".ui.student.StudentHomeActivity"
