--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         tools:targetApi="30">
         
         <activity
-            android:name=".ui.RolePickerActivity"
+            android:name=".ui.auth.LoginActivity"
             android:exported="true"
             android:theme="@style/Theme.SemScan">
             <intent-filter>
@@ -30,6 +30,31 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.auth.FirstTimeSetupActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SemScan" />
+
+        <activity
+            android:name=".ui.auth.DegreeSelectionActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SemScan" />
+
+        <activity
+            android:name=".ui.auth.MScRoleSelectionActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SemScan" />
+
+        <activity
+            android:name=".ui.auth.RoleContextActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SemScan" />
+
+        <activity
+            android:name=".ui.RolePickerActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SemScan" />
         
         <activity
             android:name=".ui.student.StudentHomeActivity"
@@ -53,19 +78,6 @@
             android:screenOrientation="portrait"
             android:keepScreenOn="true" />
         
-        <activity
-            android:name=".ui.teacher.AddSeminarActivity"
-            android:exported="false"
-            android:label="Create Seminar"
-            android:theme="@style/Theme.SemScan" />
-
-        <activity
-            android:name=".ui.teacher.AddAvailabilityActivity"
-            android:exported="false"
-            android:label="Add Availability"
-            android:theme="@style/Theme.SemScan" />
-            
-            
         <activity
             android:name=".ui.qr.QRScannerActivity"
             android:exported="false"
