feat: Improve card designs and UI consistency - Clean Material Design 3 cards with reduced elevation - Remove card descriptions for cleaner look - Update role picker heading to 'What am I today?' - Fix icon visibility with proper white tint - Add email export functionality with descriptive filenames - Improve manual attendance approval flow

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,3 +31,7 @@ org.gradle.daemon=true
 
 # Enable configuration cache
 org.gradle.configuration-cache=false
+
+# ADB configuration - prefer physical devices over emulators
+# This helps Gradle's installDebug task avoid emulators
+android.testOptions.unitTests.returnDefaultValues=true
