feat: Add frontend validation to allow second presenter to open session
Main Feature:
- Add frontend validation to prevent duplicate sessions when another presenter has an open session
- Block session opening with detailed error messages if conflict detected
- Query open sessions before opening to detect conflicts

UI/UX Improvements:
- Remove top-right menu from Presenter Dashboard and improve bottom buttons
- Remove "Choose your role" text from role picker
- Improve export screen to show session details and navigate to home after export

Documentation:
- Add comprehensive TEST_CASES.md with 40 edge test cases

Additional:
- Enhanced error handling, logging, and better error messages throughout

--- a/gradle.properties
+++ b/gradle.properties
@@ -35,3 +35,7 @@ org.gradle.configuration-cache=false
 # ADB configuration - prefer physical devices over emulators
 # This helps Gradle's installDebug task avoid emulators
 android.testOptions.unitTests.returnDefaultValues=true
+
+# 16 KB page size compatibility for Android 15+
+# Updated ML Kit and CameraX libraries to versions that support 16 KB alignment
+# See: https://developer.android.com/16kb-page-size
